--- a/src/app/components/weather-display/weather-display.component.html
+++ b/src/app/components/weather-display/weather-display.component.html
@@ -17,7 +17,9 @@
         <li>Zachód: {{ weatherData.sunset }}</li>
       </ul>
     </div>
-    <div class="flex flex-col items-center justify-center lg:space-y-4 mr-24">
+    <div
+      class="flex flex-col items-center justify-center lg:space-y-4 m-4 lg:m-24"
+    >
       <img class="" src="{{ weatherData.iconUrl }}" width="100" height="100" />
       <p class="text-white text-sm lg:text-xl font-medium mb-4">
         {{ weatherData.description }}
